--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <h1>Dylan Power</h1>
         <p>Facilitating comprehensive and substantive healthcare by providing medical professionals with advanced technologies designed to enhance and positively impact patient care. FT Health Informatics student at FHSU..</p>
-        <p><a href="https://www.linkedin.com/in/dylan_power_fhsu" target="_blank">Connect with me on LinkedIn</a></p>
+        <p><a href="https://www.linkedin.com/in/dylan-power-fhsu/" target="_blank">Connect with me on LinkedIn</a></p>
     </div>
 </body>
 </html>
