--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
         <p>Facilitating comprehensive and substantive healthcare by providing medical professionals with advanced technologies designed to enhance and positively impact patient care. FT Health Informatics student at FHSU..</p>
         <p><a href="https://www.linkedin.com/in/dylan-power-fhsu/" target="_blank">Connect with me on LinkedIn</a></p>
     </div>
+    <ul>
+  <li>Healthcare IT specialization</li>
+  <li>Former Critical Access Hospital System Administrator</li>
+  <li>Precision Ag Hobbyist</li>
+</ul>
+
 </body>
 </html>
